@@ -1,96 +1,89 @@
 package com.in28minutes.springboot.controller;
 
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.nio.charset.Charset;
-import java.util.Arrays;
+import java.nio.charset.StandardCharsets;
+import java.util.Base64;
+import java.util.List;
+import java.util.Objects;
 
+import com.in28minutes.springboot.StudentApplication;
+import com.in28minutes.springboot.model.Course;
 import org.json.JSONException;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.skyscreamer.jsonassert.JSONAssert;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.web.client.TestRestTemplate;
-import org.springframework.boot.web.server.LocalServerPort;
+import org.springframework.boot.test.web.server.LocalServerPort;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.crypto.codec.Base64;
-import org.springframework.test.context.junit4.SpringRunner;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 
-import com.in28minutes.springboot.StudentApplication;
-import com.in28minutes.springboot.model.Course;
-
-@RunWith(SpringRunner.class)
+@ExtendWith(SpringExtension.class)
 @SpringBootTest(classes = StudentApplication.class,
-		webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
+        webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 public class StudentControllerIT {
 
-	@LocalServerPort
-	private int port;
+    @LocalServerPort
+    private int port;
 
-	TestRestTemplate restTemplate = new TestRestTemplate();
+    TestRestTemplate restTemplate = new TestRestTemplate();
 
-	HttpHeaders headers = new HttpHeaders();
+    HttpHeaders headers = new HttpHeaders();
 
-	@Before
-	public void before() {
-		headers.add("Authorization", createHttpAuthenticationHeaderValue(
-				"user1", "secret1"));
-		headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON));
-	}
+    @BeforeEach
+    public void before() {
+        headers.add("Authorization", createHttpAuthenticationHeaderValue(
+                "user1", "secret1"));
+        headers.setAccept(List.of(MediaType.APPLICATION_JSON));
+    }
 
-	@Test
-	public void testRetrieveStudentCourse() throws JSONException {
+    @Test
+    public void testRetrieveStudentCourse() throws JSONException {
 
-		HttpEntity<String> entity = new HttpEntity<String>(null, headers);
+        HttpEntity<String> entity = new HttpEntity<>(null, headers);
 
-		ResponseEntity<String> response = restTemplate.exchange(
-				createURLWithPort("/students/Student1/courses/Course1"),
-				HttpMethod.GET, entity, String.class);
+        ResponseEntity<String> response = restTemplate.exchange(
+                createURLWithPort("/students/Student1/courses/Course1"),
+                HttpMethod.GET, entity, String.class);
 
-		String expected = "{id:Course1,name:Spring,description:10Steps}";
+        String expected = "{\"id\":\"Course1\",\"name\":\"Spring\",\"description\":\"10Steps\"}";
+        System.out.println(response.getBody());
+        JSONAssert.assertEquals(expected, response.getBody(), false);
+    }
 
-		JSONAssert.assertEquals(expected, response.getBody(), false);
-	}
+    @Test
+    public void addCourse() {
 
-	@Test
-	public void addCourse() {
+        Course course = new Course("Course1", "Spring", "10Steps",
+                List.of("Learn Maven", "Import Project", "First Example", "Second Example"));
 
-		Course course = new Course("Course1", "Spring", "10Steps", Arrays
-				.asList("Learn Maven", "Import Project", "First Example",
-						"Second Example"));
+        HttpEntity<Course> entity = new HttpEntity<>(course, headers);
 
-		HttpEntity<Course> entity = new HttpEntity<Course>(course, headers);
+        ResponseEntity<String> response = restTemplate.exchange(
+                createURLWithPort("/students/Student1/courses"),
+                HttpMethod.POST, entity, String.class);
 
-		ResponseEntity<String> response = restTemplate.exchange(
-				createURLWithPort("/students/Student1/courses"),
-				HttpMethod.POST, entity, String.class);
+        String actual = Objects.requireNonNull(response.getHeaders().get(HttpHeaders.LOCATION)).get(0);
 
-		String actual = response.getHeaders().get(HttpHeaders.LOCATION).get(0);
+        assertTrue(actual.contains("/students/Student1/courses/"));
 
-		assertTrue(actual.contains("/students/Student1/courses/"));
+    }
 
-	}
+    private String createURLWithPort(String uri) {
+        return "http://localhost:" + port + uri;
+    }
 
-	private String createURLWithPort(String uri) {
-		return "http://localhost:" + port + uri;
-	}
+    private String createHttpAuthenticationHeaderValue(String userId, String password) {
+        String auth = userId + ":" + password;
+        byte[] encodedAuth = Base64.getEncoder().encode(auth.getBytes(StandardCharsets.US_ASCII));
 
-	private String createHttpAuthenticationHeaderValue(String userId,
-			String password) {
-
-		String auth = userId + ":" + password;
-
-		byte[] encodedAuth = Base64.encode(auth.getBytes(Charset
-				.forName("US-ASCII")));
-
-		String headerValue = "Basic " + new String(encodedAuth);
-
-		return headerValue;
-	}
+        return "Basic " + new String(encodedAuth);
+    }
 
 }
